examples/gcp_firewall_demo.json
[
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "Allow internal traffic on the default network",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000001",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-internal",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/default-allow-internal",
    "sourceRanges": [
      "10.128.0.0/9"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "Allow SSH from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000002",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-ssh",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/default-allow-ssh",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "3389"
        ]
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "Allow RDP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000003",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-rdp",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/default-allow-rdp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "Allow ICMP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000004",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-icmp",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/default-allow-icmp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "443"
        ]
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000005",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": true
    },
    "name": "allow-https-lb",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/prod-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/allow-https-lb",
    "sourceRanges": [
      "130.211.0.0/22",
      "35.191.0.0/16"
    ],
    "targetTags": [
      "web"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "Identity-Aware Proxy TCP forwarding",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000006",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": true
    },
    "name": "allow-ssh-iap",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/prod-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/allow-ssh-iap",
    "sourceRanges": [
      "35.235.240.0/20"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "5432"
        ]
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000007",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-db-from-app",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/prod-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/allow-db-from-app",
    "sourceTags": [
      "app"
    ],
    "targetTags": [
      "db"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "6379"
        ]
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000008",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-redis-anywhere",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/prod-vpc",
    "priority": 900,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/allow-redis-anywhere",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "redis"
    ]
  },
  {
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "denied": [
      {
        "IPProtocol": "all"
      }
    ],
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4000000000000000009",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": true
    },
    "name": "deny-all-ingress-logged",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/prod-vpc",
    "priority": 65000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/deny-all-ingress-logged",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "denied": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "25"
        ]
      }
    ],
    "description": "",
    "destinationRanges": [
      "0.0.0.0/0"
    ],
    "direction": "EGRESS",
    "disabled": false,
    "id": "4000000000000000010",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "deny-egress-smtp",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/prod-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/deny-egress-smtp"
  },
  {
    "allowed": [
      {
        "IPProtocol": "udp",
        "ports": [
          "53"
        ]
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "",
    "destinationRanges": [
      "8.8.8.8/32"
    ],
    "direction": "EGRESS",
    "disabled": false,
    "id": "4000000000000000011",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-egress-dns",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/prod-vpc",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/allow-egress-dns"
  },
  {
    "allowed": [
      {
        "IPProtocol": "all"
      }
    ],
    "creationTimestamp": "2025-03-14T09:26:53.589-07:00",
    "description": "",
    "destinationRanges": [
      "0.0.0.0/0"
    ],
    "direction": "EGRESS",
    "disabled": true,
    "id": "4000000000000000012",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "test-open-egress",
    "network": "https://www.googleapis.com/compute/v1/projects/demo-project/global/networks/prod-vpc",
    "priority": 500,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/demo-project/global/firewalls/test-open-egress"
  }
]
